# Cryptography_app

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE.txt  README.md
app/: CMakeLists.txt  Main.qml  bridge.cpp  bridge.h  cryption_window.qml  cypher_window.qml  main.cpp  usage.txt
backend/: CMakeLists.txt  explanation.md
backend/cryption/: CMakeLists.txt  cryption_main.cpp  cryption_main.hpp
backend/cryption/encyptDecrypt/: file_cryption.cpp  file_cyption.hpp
backend/cryption/file_handling/: IO.cpp  IO.hpp  ReadFromEnv.cpp
backend/cryption/processManagement/: pM.cpp  pM.hpp  tasks.hpp
backend/cypher/: my_data.sig  myevp_key.cpp  myevp_key.h  prv_enc.pem  public.pem  verify_main.cpp  verify_main.hpp
backend/cypher/files/: my_data.txt
docs/: architecture.md  usage.md
tests/: CMakeLists.txt  test.cpp
